testcases/bindgen/79/error_message.txt
error[E0600]: cannot apply unary operator `-` to type `u64`
 --> failing2.rs:3:48
  |
3 | pub const g_107: ::std::os::raw::c_ulonglong = -1;
  |                                                ^^

error: aborting due to previous error